PR9866 band-aid: deactivate new CONFIG_STACKTRACE code for older kernels